--- a/MusicAppLayout/Playlist.storyboard
+++ b/MusicAppLayout/Playlist.storyboard
@@ -53,6 +53,9 @@
                                                         <constraint firstAttribute="width" constant="30" id="flz-r4-s3n"/>
                                                         <constraint firstAttribute="height" constant="30" id="ryg-nw-fJn"/>
                                                     </constraints>
+                                                    <connections>
+                                                        <action selector="didTapLike:" destination="OJq-y7-nhz" eventType="touchUpInside" id="lH7-6Q-DZf"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
