Creating the empty screens, when there is no data for the table views.

--- a/MusicAppLayout/Storyboards/Base.lproj/Main.storyboard
+++ b/MusicAppLayout/Storyboards/Base.lproj/Main.storyboard
@@ -150,6 +150,16 @@
             </objects>
             <point key="canvasLocation" x="886.95652173913049" y="62.946428571428569"/>
         </scene>
+        <!--Discover-->
+        <scene sceneID="Pyh-f2-bSz">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Discover" id="VyA-nd-kHN" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="WbA-l3-bZI"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HDe-sh-ZiF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1798" y="867"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="muh-xa-efU">
             <objects>
@@ -162,6 +172,7 @@
                         <color key="selectedImageTintColor" systemColor="systemGreenColor"/>
                     </tabBar>
                     <connections>
+                        <segue destination="0FY-bb-EAp" kind="relationship" relationship="viewControllers" id="hFZ-pa-wbx"/>
                         <segue destination="rg1-He-fLH" kind="relationship" relationship="viewControllers" id="zrA-Zh-nAG"/>
                         <segue destination="VPg-N0-VXX" kind="relationship" relationship="viewControllers" id="iZp-9w-Sce"/>
                     </connections>
@@ -174,7 +185,7 @@
         <scene sceneID="vzp-mg-SHI">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VPg-N0-VXX" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Favorites" image="heart.fill" selectedImage="heart.fill" catalog="system" id="cex-Q8-gAF"/>
+                    <tabBarItem key="tabBarItem" title="Favorites" image="heart.fill" catalog="system" selectedImage="heart.fill" id="cex-Q8-gAF"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="hCl-aO-LII">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -189,12 +200,31 @@
             </objects>
             <point key="canvasLocation" x="887" y="-627"/>
         </scene>
+        <!--Discover-->
+        <scene sceneID="jvv-03-sSf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0FY-bb-EAp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Discover" image="magnifyingglass" catalog="system" id="spP-Ue-j7b"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zXO-xm-q0x">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="VyA-nd-kHN" kind="relationship" relationship="rootViewController" id="ZfG-c4-Tu1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HTC-CN-v3d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="887" y="867"/>
+        </scene>
     </scenes>
     <resources>
         <image name="book.closed.fill" catalog="system" width="115" height="128"/>
         <image name="chevron.right" catalog="system" width="96" height="128"/>
-        <image name="heart.fill" width="128" height="128"/>
         <image name="heart.fill" catalog="system" width="128" height="109"/>
+        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
