--- a/MusicAppLayout/Storyboards/Player.storyboard
+++ b/MusicAppLayout/Storyboards/Player.storyboard
@@ -14,11 +14,11 @@
             <objects>
                 <viewController id="Y6W-OH-hqX" customClass="PlayerViewController" customModule="MusicAppLayout" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="786"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forward.end.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="yrz-1g-idr">
-                                <rect key="frame" x="284.5" y="763.5" width="51" height="52"/>
+                                <rect key="frame" x="284.5" y="687.5" width="51" height="52"/>
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="51" id="N04-Gf-B0e"/>
@@ -27,7 +27,7 @@
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="ultraLight"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backward.end.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="VAa-fD-1ck">
-                                <rect key="frame" x="78.5" y="763.5" width="51" height="52"/>
+                                <rect key="frame" x="78.5" y="687.5" width="51" height="52"/>
                                 <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="57" id="NO4-eh-upP"/>
@@ -36,7 +36,7 @@
                                 <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="ultraLight"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Zb2-2N-rok">
-                                <rect key="frame" x="20" y="668.5" width="374" height="54.5"/>
+                                <rect key="frame" x="20" y="592.5" width="374" height="54.5"/>
                                 <subviews>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZnT-yu-zvw" customClass="CustomSlider" customModule="MusicAppLayout" customModuleProvider="target">
                                         <rect key="frame" x="-2" y="0.0" width="378" height="31"/>
@@ -64,7 +64,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="q67-0Z-8ez">
-                                <rect key="frame" x="20" y="582.5" width="374" height="62"/>
+                                <rect key="frame" x="20" y="506.5" width="374" height="62"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="5H2-OM-qBf">
                                         <rect key="frame" x="0.0" y="0.0" width="338" height="62"/>
@@ -101,17 +101,17 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WnN-jN-Ker">
-                                <rect key="frame" x="20" y="108" width="374" height="454.5"/>
+                                <rect key="frame" x="20" y="20" width="374" height="466.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="01e4645491334a4a3982" translatesAutoresizingMaskIntoConstraints="NO" id="Vu3-u8-ayo">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="447"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="459"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xIP-SG-MuK">
-                                <rect key="frame" x="164.5" y="750" width="85" height="82"/>
+                                <rect key="frame" x="164.5" y="674" width="85" height="82"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <color key="tintColor" systemColor="systemGreenColor"/>
                                 <state key="normal">
@@ -149,6 +149,9 @@
                     <navigationItem key="navigationItem" title="Playing" largeTitleDisplayMode="never" id="qQL-Tf-gv9">
                         <barButtonItem key="rightBarButtonItem" title="Queue" image="list.dash" catalog="system" id="oGr-D0-EKb">
                             <color key="tintColor" systemColor="systemGreenColor"/>
+                            <connections>
+                                <segue destination="iBn-kk-HU2" kind="presentation" id="i8m-wS-yaX"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -165,16 +168,121 @@
             </objects>
             <point key="canvasLocation" x="946.37681159420299" y="101.11607142857143"/>
         </scene>
+        <!--Queue-->
+        <scene sceneID="KER-XN-3Ue">
+            <objects>
+                <viewController id="iBn-kk-HU2" customClass="QueueViewController" customModule="MusicAppLayout" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kK6-PD-oLm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9bm-lQ-Kcb">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" systemColor="systemGreenColor"/>
+                                <items>
+                                    <navigationItem title="Queue" largeTitleDisplayMode="never" id="IuT-YO-Y6E">
+                                        <barButtonItem key="rightBarButtonItem" title="Close" id="9X0-6v-ceh"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="V91-ZQ-n9S">
+                                <rect key="frame" x="20" y="82" width="374" height="211"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="queue-cell" rowHeight="84" id="dSq-5q-CXh" customClass="QueueCell" customModule="MusicAppLayout" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="374" height="84"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dSq-5q-CXh" id="wqP-wT-kBY">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="84"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="73d-Us-zEb">
+                                                    <rect key="frame" x="20" y="21" width="50" height="42"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="1tx-gR-3Jj"/>
+                                                        <constraint firstAttribute="width" constant="50" id="lrc-NK-scu"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kpu-Mr-POp">
+                                                    <rect key="frame" x="78" y="21" width="41.5" height="35.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iKf-3N-qjG">
+                                                            <rect key="frame" x="0.0" y="0.0" width="41.5" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V66-te-9YL">
+                                                            <rect key="frame" x="0.0" y="19.5" width="41.5" height="16"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <color key="textColor" systemColor="secondaryLabelColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QBF-lC-FBw">
+                                                    <rect key="frame" x="349" y="30" width="25" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="FPf-ec-pJA"/>
+                                                        <constraint firstAttribute="height" constant="24" id="JEj-LC-GEi"/>
+                                                    </constraints>
+                                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <state key="normal" title="Button" image="heart" catalog="system"/>
+                                                    <connections>
+                                                        <action selector="didTapFavoriteButton:" destination="dSq-5q-CXh" eventType="touchUpInside" id="MxS-hp-vuw"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="73d-Us-zEb" secondAttribute="bottom" constant="10" id="6gL-1B-n0C"/>
+                                                <constraint firstItem="73d-Us-zEb" firstAttribute="leading" secondItem="wqP-wT-kBY" secondAttribute="leadingMargin" id="DsR-g8-VnX"/>
+                                                <constraint firstItem="QBF-lC-FBw" firstAttribute="centerY" secondItem="wqP-wT-kBY" secondAttribute="centerY" id="PL6-Ce-17F"/>
+                                                <constraint firstItem="73d-Us-zEb" firstAttribute="top" secondItem="wqP-wT-kBY" secondAttribute="topMargin" constant="10" id="QX5-bd-vDe"/>
+                                                <constraint firstAttribute="trailing" secondItem="QBF-lC-FBw" secondAttribute="trailing" id="VjP-xx-0Fp"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="albumImage" destination="73d-Us-zEb" id="IWo-Ko-242"/>
+                                            <outlet property="artistName" destination="V66-te-9YL" id="iej-Ou-ZPa"/>
+                                            <outlet property="favoriteButton" destination="QBF-lC-FBw" id="i5G-Xy-efQ"/>
+                                            <outlet property="songTitle" destination="iKf-3N-qjG" id="cSw-K2-n9q"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ezt-JX-O1C"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Queue" largeTitleDisplayMode="never" id="6jT-de-IND">
+                        <barButtonItem key="backBarButtonItem" title="        " id="r25-1J-eZd"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="V91-ZQ-n9S" id="CFB-sQ-McS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zxj-Dq-kcb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1831.8840579710147" y="101.78571428571428"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="wVy-Jp-X7O">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mHU-wb-Nxv" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VzC-vF-ZoD">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <modalPageSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="VzC-vF-ZoD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FcP-uE-gy6">
+                        <rect key="frame" x="0.0" y="-54" width="0.0" height="0.0"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="0Yq-ga-vH6"/>
                     </connections>
